# study-case-20250521

./: .dockerignore  .env-sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/: copilot-instructions.md
config/: settings.yaml
dags/: breweries_pipeline.py
src/bronze/: Dockerfile  main.py  settings.yaml
src/config/: cloud-resources.json  project-settings.yaml
src/gold/: Dockerfile  main.py
src/silver/: Dockerfile  main.py
terraform/: main.tf  outputs.tf  random.tf  variables.tf
terraform/modules/ecr/: main.tf  outputs.tf
terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
